--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -114,6 +114,17 @@ h1,h2{
     text-decoration: none;
 }
 
+.btn-primary {
+    margin: 5 px;
+    
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 5 px;
+    border-radius: 4px;
+    
+}
+
 /* Стили футера */
  footer {
             background: linear-gradient(189deg, #00c4f5 0%, #ffffff 100%);
@@ -194,6 +205,83 @@ h1,h2{
     }
 }
 
+
+/* формы входа и авторизации */
+.signup-form {
+    max-width: 400px;
+    margin: 2rem auto;
+    padding: 2rem;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+
+.form-header {
+    text-align: center;
+    margin-bottom: 1.5rem;
+}
+
+.form-header h2 {
+    color: #333;
+    font-size: 1.8rem;
+    margin-bottom: 0.5rem;
+}
+
+.form-header p {
+    color: #666;
+    font-size: 1rem;
+}
+
+.form-group {
+    margin-bottom: 1.5rem;
+}
+
+label {
+    display: block;
+    margin-bottom: 0.5rem;
+    color: #444;
+    font-weight: 500;
+}
+
+input {
+    width: 100%;
+    padding: 0.8rem;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    font-size: 1rem;
+}
+
+button {
+    width: 100%;
+    padding: 1rem;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s;
+}
+
+button:hover {
+    background-color: #0056b3;
+}
+
+.error-messages {
+    color: #dc3545;
+    font-size: 0.9rem;
+    margin-top: 0.25rem;
+}
+.user-status {
+    margin: 1rem 0;
+    padding: 1rem;
+    background-color: #f8f9fa;
+    border-radius: 4px;
+}
+.user-info {
+    display: flex;
+    gap: 6px;
+    padding-left: 10px;
+}
 
 /* Адаптивный дизайн */
 @media (max-width: 768px) {
