--- a/main/templates/main/book_list.html
+++ b/main/templates/main/book_list.html
@@ -7,8 +7,33 @@
 {% block content%}
 <h1>Книги</h1>
 
-{%for i in book%}
-<a href="{% url 'book_item' i.id %}"><p>{{i.tittle}}</p></a>
-{%endfor%}
+<div class="row">
+    {% for i in book %}
+      <div class="col-md-4 mb-4">
+        <div class="card" style="width: 18rem;">
+            <a href="{% url 'book_item' i.id %}"><img src="/media/{{i.image}}" class="card-img-top" alt="..."></a>
+            <div class="card-body">
+              <h5 class="card-title">{{i.tittle}}</h5>
+              
+              <p class="card-text">
+                {% for tag in i.tags.all %}
+                    <a href="{% url 'tag_list' tag.id %}"><span class="badge bg-secondary">{{ tag.name }}</span></a>
+                    {% if not forloop.last %} {% endif %}
+                {% endfor %}
+              </p>
+              
+              <a href="{% url 'book_item' i.id %}" class="btn btn-primary">Читать дальше</a>
+            </div>
+        </div>
+      </div>
+      
+      {% if forloop.counter|divisibleby:3 and not forloop.last %}
+        </div><div class="row">
+      {% endif %}
+    {% endfor %}
+  </div>
 
 {% endblock %}
+
+
+
