--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -33,7 +33,7 @@
         <a href="{% url 'autor_detail' i.id%}"><img src="/media/{{i.image}}" class="card-img-top" alt="..."></a>
         <div class="card-body">
           <h5 class="card-title"> {{i.first_name}} {{i.other_name}} {{i.last_name}}</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">{{i.biography|truncatechars:100}}</p>
           <a href="{% url 'autor_detail' i.id%}" class="btn btn-primary">Биография</a>
         </div>
       </div>
